<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_trails"
            android:icon="@drawable/ic_menu_my_trails"
            android:title="@string/menu_my_trails" />
        <item
            android:id="@+id/nav_all_trails"
            android:icon="@drawable/ic_menu_all_trails"
            android:title="@string/menu_all_trails" />

        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_menu_near_me"
            android:title="@string/menu_near_me" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>