<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="xyz.stephenswanton.trailapp2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_all_trails"
        android:name="xyz.stephenswanton.trailapp2.ui.alltrails.TrailListFragment"
        android:label="@string/menu_all_trails"
        tools:layout="@layout/fragment_list_trails" />

    <fragment
        android:id="@+id/nav_my_trails"
        android:name="xyz.stephenswanton.trailapp2.ui.mytrails.MyTrailListFragment"
        android:label="@string/menu_my_trails"
        tools:layout="@layout/fragment_list_trails" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="xyz.stephenswanton.trailapp2.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>